# poketour

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  package.json  railway.json
.github/workflows/: tauri-build.yml
backend/: pyproject.toml
backend/app/: db.py  encounter.py  events.py  main.py  models.py  schemas.py  spawn.py  species.py
backend/data/: events.yaml  species.yaml
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: api.ts  audio.ts  input.ts  main.ts  pixelart.ts  player.ts  sprites.ts  tilemap.ts
frontend/src/game/: encounter.ts  spawn.ts  storage.ts
frontend/src/game/data/: events.ts  species.ts
frontend/src/scenes/: encounter.ts  kodex.ts  overworld.ts  scene-host.ts  settings.ts  title.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tools/: process_player.py  process_sprites.py  process_tiles.py  sprite-prompts.md
