[package]
name = "poketour"
version = "0.1.0"
description = "Poketour — a retro creature collector set in Hamburg's Karolinenviertel."
authors = ["Thinventions"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "poketour_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
